[gd_scene load_steps=3 format=3 uid="uid://cq4i5clpbf8r1"]

[ext_resource type="Script" path="res://Scenes/Menu/menu.gd" id="1_j06mv"]
[ext_resource type="PackedScene" uid="uid://bonm7ikbwwv0e" path="res://Scenes/cannon_room/cannon_room.tscn" id="2_qrn3t"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_j06mv")
player_scene = ExtResource("2_qrn3t")

[node name="play" type="Button" parent="."]
offset_left = 549.0
offset_top = 394.0
offset_right = 725.0
offset_bottom = 476.0
text = "Start game"

[node name="host" type="Button" parent="."]
offset_left = 427.0
offset_top = 335.0
offset_right = 470.0
offset_bottom = 366.0
text = "host"

[node name="join" type="Button" parent="."]
offset_left = 430.0
offset_top = 282.0
offset_right = 467.0
offset_bottom = 313.0
text = "join"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Scenes/cannon_room/cannon_room.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="play" to="." method="_on_button_pressed"]
[connection signal="pressed" from="host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="join" to="." method="_on_join_pressed"]
